--- a/responsive.css
+++ b/responsive.css
@@ -1,52 +1,26 @@
-/* Untuk Tablet */
 @media all and (max-width: 1000px) {
+  .top-wrapper h1 {font-size:32px;}
   .lesson {
     width: 50%;
-    margin-bottom: 50px;
+    margin-bottom:50px;
   }
-  
-  .top-wrapper h1 {
-    font-size: 32px;
-  }
-  
-  .heading h2 {
-    font-size: 20px;
-  }
+  .heading h2 {font-size:20px;}
 }
 
-/* Untuk Smartphone */
 @media all and (max-width: 670px) {
-  .lesson {
-    width: 100%;
+  .header-right {
+    display: none;
   }
   
-  footer {
-    text-align: center;
+  .menu-icon {
+    display: block;
   }
   
-  .btn {
-    width: 100%;
-  }
-  
-  .facebook {
-    margin-bottom: 10px;
-  }
-  
-  .top-wrapper {
-    text-align: left;
-  }
-  
-  .header-right {display:none;}
-  
-  .menu-icon {display:block;}
-  
-  .top-wrapper h1 {
-    font-size: 24px;
-    line-height: 36px;
-  }
-  
-  .top-wrapper p {
-    font-size: 14px;
-    line-height: 20px;
-  }
+  .btn {width:100%;}
+  .facebook {margin-bottom:10px;}
+  .top-wrapper {text-align:left;}
+  .top-wrapper h1 {font-size:24px;line-height:36px;}
+  .top-wrapper p {font-size:14px;line-height:20px;}
+  .lesson {width:100%;}
+  footer {text-align:center;}
 }
