--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,14 +2,8 @@
   box-sizing: border-box;
 }
 
-html, body,
-ul, ol, li,
-h1, h2, h3, h4, h5, h6, p, div {
-  margin: 0;
-  padding: 0;
-}
-
 body {
+  margin: 0;
   font-family: "Lucida Grande";
 }
 
@@ -23,6 +17,7 @@ a {
 
 .container {
   max-width: 1170px;
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -122,6 +117,15 @@ header {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 21px 0;
+  display:none;
+}
+
+
 .lesson-wrapper {
   padding-bottom: 80px;
   padding-left: 5%;
@@ -199,12 +203,4 @@ footer p {
 footer {
   padding-top: 30px;
   padding-bottom: 20px;
-}
-
-.menu-icon {
-  color: white;
-  float: right;
-  font-size: 25px;
-  padding: 21px 0;
-  display: none;
 }
