--- a/responsive.css
+++ b/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 1000px) {
+@media all (max-width: 1000px) {
   .lesson {
     width: 50%;
     margin-bottom: 50px;
@@ -13,7 +13,7 @@
   }
 }
 
-@media (max-width: 670px) {
+@media all max-width: 670px) {
   .lesson {
     width: 100%;
   }
@@ -34,9 +34,9 @@
     text-align: left;
   }
   
-  .header-right {display:none;}
+  .header-right {display:none}
   
-  .menu-icon {display:block;}
+  .menu-icon {display:block}
   
   .top-wrapper h1 {
     font-size: 24px;
