--- a/stylesheet.css
+++ b/stylesheet.css
@@ -122,9 +122,11 @@ header {
   float: right;
   font-size: 25px;
   padding: 21px 0;
-  display: none;
 }
 
+.menu-icon {
+  display : none;
+}
 
 .lesson-wrapper {
   padding-bottom: 80px;
