--- a/responsive.css
+++ b/responsive.css
@@ -33,9 +33,9 @@
     text-align: left;
   }
   
-  .header-right {display:none}
+  .header-right {display:none;}
   
-  .menu-icon {display:block}
+  .menu-icon {display:block;}
   
   .top-wrapper h1 {
     font-size: 24px;
